Fixed the extra margins on category card under mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -1024,6 +1024,7 @@ footer p {
     	height: 40em;
     	margin-left: -9em;
     	margin-top: -58em;
+		margin-bottom: 29em;
 	}
 
 	/* ViewPageUi elements to... */
